# S3Watch

./: README.MD  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/audio_alert/include/: audio_alert.h
components/audio_alert/src/: audio_alert.c
components/ble_sync/: CMakeLists.txt  ble_sync.c  idf_component.yml
components/bsp_extra/: CMakeLists.txt  idf_component.yml
components/bsp_extra/include/: bsp_board_extra.h  rtc_lib.h
components/bsp_extra/src/: bsp_board_extra.c  pcf85063a.c  rtc_lib.c
components/display_manager/: CMakeLists.txt  display_manager.c
components/display_manager/include/: display_manager.h
components/gui/: CMakeLists.txt
components/gui/font/: font_numbers_120.c
components/gui/icons/: background_wf_3.c
components/gui/include/: scroll_keyboard.h  setting_time_format_screen.h  setting_time_screen.h  setting_watchface_screen.h  ui_fonts.h  watchface.h  wifi_screens.h
components/gui/src/: lvgl_spiffs_fs.c  scroll_keyboard.c  setting_flashlight_screen.c  setting_time_format_screen.c  setting_time_screen.c  setting_watchface_screen.c  settings_menu_screen.c  settings_screen.c  storage_file_explorer.c  ui.c  watchface.c  wifi_screens.c
components/ntp_sync/: CMakeLists.txt
components/ntp_sync/include/: ntp_sync.h
components/ntp_sync/src/: ntp_sync.c
components/settings/: idf_component.yml  settings.c
components/settings/include/: settings.h
components/wifi_manager/: CMakeLists.txt
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  main.cpp
(+1 files in other folders)
